[package]
name = "git-branch-history"
description = "Tool for navigating through a history of branch checkouts."
repository = "https://github.com/RiddleMan/git-branch-history"
version = "0.1.0"
edition = "2021"
default-run = "git-branch-history"
authors = ["Artur Ptaszek <artur@ptaszek.dev>"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT OR Apache-2.0"
include = [
    "/benches/**",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = ["git", "version-control"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
git2 = "0.18.1"
lazy_static = "1.4.0"
regex = "1.7.1"

[[bin]]
name = "git-popb"
path = "src/pop_branch.rs"
